glx/testdata/invalid/assertion-quality-int-pointer/persons/person-123.glx
persons:
  person-123:
    properties:
      given_name: "John"


